Update contact form and README

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 					<p>If you are interested in learning more about the Bummer Status experience or booking us for a show, please feel free to drop us a note here.</p>
 					<form method="post" action="#">
 						<div class="row">
-							<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-							<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
+							<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="First name ..." /></div>
+							<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email ..." /></div>
 							<div class="col-12">
-								<textarea name="message" placeholder="Message"></textarea>
+								<textarea name="message" placeholder="Message ..."></textarea>
 							</div>
 							<div class="col-12">
 								<input type="submit" value="Submit" />
