--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 					<li><a href="https://twitter.com/bummerstatus26" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.instagram.com/bummerstatus/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://open.spotify.com/artist/0nT3SbubOPPXR38HQwJ8yC" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
+					<li><a href="https://soundcloud.com/user-850762260" class="icon brands fa-soundcloud"><span class="label">SoundCloud</span></a></li>
 					<li><a href="https://www.youtube.com/channel/UCX_2bi2HPLyAxMxuL_txoAg" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-					<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -40,7 +40,7 @@
 				<div class="container">
 					<header>
 						<h2 class="alt">Hello! We are a Boston-based rock band <br />known as <strong>Bummer Status.</strong></h2>
-						<p>We've been quietly working on our first album expected in Spring 2022<br />
+						<p>We've been quietly working on our first album Jamming in my Snowpants, expected in Spring 2022<br />
 						and have released a few piping hot singles in the meantime.</p>
 					</header>
 					<footer>
