--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		</div>
 		<div id="footer">
 			<ul class="copyright">
-				<li>&copy; Bummer Status 2022, all rights reserved.</li><li>Design by <a href="https://github.com/michemcc">Michael Ernest McCarthy</a></li>
+				<li>&copy; Bummer Status 2022, all rights reserved.</li><li>Design by <a href="https://github.com/michemcc" target="_blank">Michael Ernest McCarthy</a></li>
 			</ul>
 		</div>
 		<script src="assets/js/jquery.min.js"></script>
