--- a/index.html
+++ b/index.html
@@ -31,17 +31,28 @@
 					<li><a href="https://www.instagram.com/bummerstatus/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://open.spotify.com/artist/0nT3SbubOPPXR38HQwJ8yC" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
 					<li><a href="https://soundcloud.com/user-850762260" class="icon brands fa-soundcloud"><span class="label">SoundCloud</span></a></li>
-					<li><a href="https://www.youtube.com/channel/UCX_2bi2HPLyAxMxuL_txoAg" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+					<li><a href="https://bummerstatus.bandcamp.com/album/bmoney-demo" class="icon brands fa-bandcamp"><span class="label">BandCamp</span></a></li>
 				</ul>
 			</div>
 		</div>
 		<div id="main">
+			<section id="links" class="two">
+				<div class="container">
+					<ul class="icons" style="margin-bottom: 0; font-size: 2rem;">
+						<li><a href="https://twitter.com/bummerstatus26" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/bummerstatus/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://open.spotify.com/artist/0nT3SbubOPPXR38HQwJ8yC" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
+						<li><a href="https://soundcloud.com/user-850762260" class="icon brands fa-soundcloud"><span class="label">SoundCloud</span></a></li>
+						<li><a href="https://bummerstatus.bandcamp.com/album/bmoney-demo" class="icon brands fa-bandcamp"><span class="label">BandCamp</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCX_2bi2HPLyAxMxuL_txoAg" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+					</ul>
+				</div>
+			</section>
 			<section id="top" class="one dark cover">
 				<div class="container">
 					<header>
 						<h2 class="alt">Hello! We are a Boston-based rock band <br />known as <strong>Bummer Status.</strong></h2>
-						<p>We've been quietly working on our first album Jamming in my Snowpants, expected in Spring 2022<br />
-						and have released a few piping hot singles in the meantime.</p>
+						<p>We've been quietly working on our first album Jamming In My Snowpants, expected in Spring 2022 and have released a few piping hot singles in the meantime.</p>
 					</header>
 					<footer>
 						<a href="#portfolio" class="button scrolly">Have a look around</a>
