Open links in new browser

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 			</div>
 			<div class="bottom">
 				<ul class="icons">
-					<li><a href="https://twitter.com/bummerstatus26" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.instagram.com/bummerstatus/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://open.spotify.com/artist/0nT3SbubOPPXR38HQwJ8yC" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
-					<li><a href="https://soundcloud.com/user-850762260" class="icon brands fa-soundcloud"><span class="label">SoundCloud</span></a></li>
-					<li><a href="https://bummerstatus.bandcamp.com/album/bmoney-demo" class="icon brands fa-bandcamp"><span class="label">BandCamp</span></a></li>
+					<li><a href="https://twitter.com/bummerstatus26" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.instagram.com/bummerstatus/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+					<li><a href="https://open.spotify.com/artist/0nT3SbubOPPXR38HQwJ8yC" class="icon brands fa-spotify" target="_blank"><span class="label">Spotify</span></a></li>
+					<li><a href="https://soundcloud.com/user-850762260" class="icon brands fa-soundcloud" target="_blank"><span class="label">SoundCloud</span></a></li>
+					<li><a href="https://bummerstatus.bandcamp.com/album/bmoney-demo" class="icon brands fa-bandcamp" target="_blank"><span class="label">BandCamp</span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -39,12 +39,12 @@
 			<section id="links" class="two">
 				<div class="container">
 					<ul class="icons" style="margin-bottom: 0; font-size: 2rem;">
-						<li><a href="https://twitter.com/bummerstatus26" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.instagram.com/bummerstatus/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://open.spotify.com/artist/0nT3SbubOPPXR38HQwJ8yC" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
-						<li><a href="https://soundcloud.com/user-850762260" class="icon brands fa-soundcloud"><span class="label">SoundCloud</span></a></li>
-						<li><a href="https://bummerstatus.bandcamp.com/album/bmoney-demo" class="icon brands fa-bandcamp"><span class="label">BandCamp</span></a></li>
-						<li><a href="https://www.youtube.com/channel/UCX_2bi2HPLyAxMxuL_txoAg" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+						<li><a href="https://twitter.com/bummerstatus26" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/bummerstatus/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+						<li><a href="https://open.spotify.com/artist/0nT3SbubOPPXR38HQwJ8yC" class="icon brands fa-spotify" target="_blank"><span class="label">Spotify</span></a></li>
+						<li><a href="https://soundcloud.com/user-850762260" class="icon brands fa-soundcloud" target="_blank"><span class="label">SoundCloud</span></a></li>
+						<li><a href="https://bummerstatus.bandcamp.com/album/bmoney-demo" class="icon brands fa-bandcamp" target="_blank"><span class="label">BandCamp</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCX_2bi2HPLyAxMxuL_txoAg" class="icon brands fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
 					</ul>
 				</div>
 			</section>
