Update featured image styling

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<header>
 						<h2>About the Band</h2>
 					</header>
-					<a href="#about" class="image featured"><img src="images/bummer-fullband-2.webp" style="margin: auto; width: 75%; border-radius: 5px;" alt="Full band picture" /></a>
+					<a href="#about" class="image featured"><img src="images/bummer-fullband-2.webp" alt="Full band picture" /></a>
 					<p>With roots tracing back to the underbelly of the Burlington, VT college scene, Bummer Status is comprised of four like-minded musicians with a passion for writing and performing incredibly tasteful jams.</p>
 					<p>The band members are guitarist/vocalist Nicholas Andrews, bassist Elliott Kenney, drummer/vocalist Doug Lane, and pianist/vocalist Mike McCarthy.</p>
 				</div>
