Update section classes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 		<div id="main">
-			<section id="links" class="two">
+			<section id="links" class="main-links">
 				<div class="container">
 					<ul class="icons" style="margin-bottom: 0; font-size: 2rem;">
 						<li><a href="https://twitter.com/bummerstatus26" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
@@ -49,7 +49,7 @@
 					</ul>
 				</div>
 			</section>
-			<section id="top" class="one dark cover">
+			<section id="top" class="intro dark cover">
 				<div class="container">
 					<header>
 						<h2 class="alt">Hello! We are a Boston-based rock band <br />known as <strong>Bummer Status.</strong></h2>
@@ -60,7 +60,7 @@
 					</footer>
 				</div>
 			</section>
-			<section id="portfolio" class="two">
+			<section id="portfolio" class="discography">
 				<div class="container">
 					<header>
 						<h2>Discography</h2>
@@ -94,7 +94,7 @@
 					</div>
 				</div>
 			</section>
-			<section id="about" class="three">
+			<section id="about" class="about">
 				<div class="container">
 					<header>
 						<h2>About the Band</h2>
@@ -104,7 +104,7 @@
 					<p>The band members are guitarist/vocalist Nicholas Andrews, bassist Elliott Kenney, drummer/vocalist Doug Lane, and pianist/vocalist Mike McCarthy.</p>
 				</div>
 			</section>
-			<section id="past" class="four">
+			<section id="past" class="performances">
 				<div class="container">
 					<header>
 						<h2>Past Performances</h2>
@@ -118,7 +118,7 @@
 					<p>The Met, Providence, RI - 1/13/2017</p>
 				</div>
 			</section>
-			<section id="contact" class="five">
+			<section id="contact" class="contact">
 				<div class="container">
 					<header>
 						<h2>Get In Touch</h2>
