--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Discography</span></a></li>
 						<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Us</span></a></li>
 						<li><a href="#past" id="past-link"><span class="icon solid fa-music">Past Performances</span></a></li>
-						<li><a href="#past" id="past-link"><span class="icon solid fa-image">Gallery</span></a></li>
+						<li><a href="#gallery" id="gallery-link"><span class="icon solid fa-image">Gallery</span></a></li>
 						<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Get In Touch</span></a></li>
 					</ul>
 				</nav>
