Update gallery styling

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							<img src="images/union-mike.webp" alt="">
 						</div>
 						<div class="fg-gallery ns">
-							<img src="images/union-doug-mike" alt="">
+							<img src="images/union-doug-mike.webp" alt="">
 							<img src="images/union-nick.webp" alt="">
 							<img src="images/union-board.webp" alt="">
 							<img src="images/union-keys.webp" alt="">
@@ -188,9 +188,9 @@
 			var a = new FgGallery('.fg-gallery', {
 				cols: 4,
 				style: {
-					border: '10px solid #fff',
+					border: '8px solid #fff',
 					height: '180px',
-					borderRadius: '5px',
+					borderRadius: '4px',
 					boxShadow: '0 2px 10px -5px #858585',
 				}
 			})
@@ -200,7 +200,7 @@
 				style: {
 					border: '0 solid #fff',
 					height: '240px',
-					borderRadius: '5px',
+					borderRadius: '4px',
 				}
 			})
 		</script>
