Add what's new section

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
+						<li><a href="#whatsnew" id="whatsnew-link"><span class="icon solid fa-calendar">What's New</span></a></li>
 						<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Discography</span></a></li>
 						<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Us</span></a></li>
-						<li><a href="#past" id="past-link"><span class="icon solid fa-music">Past Performances</span></a></li>
+						<li><a href="#past" id="past-link"><span class="icon solid fa-music">Performances</span></a></li>
 						<li><a href="#gallery" id="gallery-link"><span class="icon solid fa-image">Gallery</span></a></li>
 						<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Get In Touch</span></a></li>
 					</ul>
@@ -47,7 +48,7 @@
 						<li><a href="https://music.apple.com/us/artist/bummer-status/1571591835" class="icon brands fa-apple" target="_blank"><span class="label">Apple</span></a></li>
 						<li><a href="https://soundcloud.com/user-850762260" class="icon brands fa-soundcloud" target="_blank"><span class="label">SoundCloud</span></a></li>
 						<li><a href="https://bummerstatus.bandcamp.com/album/bmoney-demo" class="icon brands fa-bandcamp" target="_blank"><span class="label">BandCamp</span></a></li>
-						<li><a href="https://www.youtube.com/channel/UCX_2bi2HPLyAxMxuL_txoAg" class="icon brands fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCmTMPodGEv3FvWGUFlRKY9g" class="icon brands fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
 					</ul>
 				</div>
 			</section>
@@ -60,6 +61,15 @@
 					<footer>
 						<a href="#portfolio" class="button scrolly">Have a look around</a>
 					</footer>
+				</div>
+			</section>
+			<section id="whatsnew" class="whatsnew">
+				<div class="container">
+					<header>
+						<h2>What's New</h2>
+					</header>
+					<p>Check out our newest (and first ever) music video, Pokemon Monopoly (For Perry)</p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/YH9eLVq9W4M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 			</section>
 			<section id="portfolio" class="discography">
@@ -109,6 +119,11 @@
 			<section id="past" class="performances">
 				<div class="container">
 					<header>
+						<h2>Upcoming Performances</h2>
+					</header>
+					<p>Midway Cafe, Jamaica Plain, MA - 5/28/2022</p>
+
+					<header>
 						<h2>Past Performances</h2>
 					</header>
 					<p>Union Tavern, Somerville, MA - 3/4/2022</p>
@@ -126,7 +141,6 @@
 						<h2>Gallery</h2>
 					</header>
 					<div class="container p-3">
-
 						<div class="fg-gallery">
 							<img src="images/prov-house-show.webp" alt="">
 							<img src="images/union-eli-mike-nick.webp" alt="">
@@ -194,7 +208,6 @@
 					boxShadow: '0 2px 10px -5px #858585',
 				}
 			})
-	
 			var a = new FgGallery('.ns', {
 				cols: 3,
 				style: {
