Fix have a look around button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<p>We've been quietly working on our first album Jamming In My Snowpants, expected in Spring 2022 and have released a few piping hot singles in the meantime.</p>
 					</header>
 					<footer>
-						<a href="#portfolio" class="button scrolly">Have a look around</a>
+						<a href="#whatsnew" class="button scrolly">Have a look around</a>
 					</footer>
 				</div>
 			</section>
