--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 			<section id="top" class="intro dark cover">
 				<div class="container">
 					<header>
-						<h2 class="alt">Hello! We are a Boston-based rock band <br />known as <strong>Bummer Status.</strong></h2>
-						<p>We've been quietly working on our first album Jamming In My Snowpants, expected in Spring 2022 and have released a few piping hot singles in the meantime.</p>
+						<h2 class="alt">Hi and welcome! We are a Boston-based rock band <br />known as <strong>Bummer Status.</strong></h2>
+						<p>Announcing our debut album - Jamming In My Snowpants, is released as of April 30th!</p>
 					</header>
 					<footer>
 						<a href="#whatsnew" class="button scrolly">Have a look around</a>
@@ -121,8 +121,8 @@
 					<header>
 						<h2>Upcoming Performances</h2>
 					</header>
+					<p>Porch Fest, Somerville, MA - 5/14/2022</p>
 					<p>Midway Cafe, Jamaica Plain, MA - 5/28/2022</p>
-
 					<header>
 						<h2>Past Performances</h2>
 					</header>
