Update main.css styling

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<section id="top" class="intro dark cover">
 				<div class="container">
 					<header>
-						<h2 class="alt">Hi and welcome! We are a Boston-based rock band <br />known as <strong>Bummer Status.</strong></h2>
+						<h2 class="alt">Hi and welcome! We are a Boston-based rock band known as <strong>Bummer Status.</strong></h2>
 						<p>Announcing our debut album - Jamming In My Snowpants, is released as of April 30th!</p>
 					</header>
 					<footer>
