Update links in index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<li><a href="https://open.spotify.com/artist/0nT3SbubOPPXR38HQwJ8yC" class="icon brands fa-spotify" target="_blank"><span class="label">Spotify</span></a></li>
 						<li><a href="https://music.apple.com/us/artist/bummer-status/1571591835" class="icon brands fa-apple" target="_blank"><span class="label">Apple</span></a></li>
 						<li><a href="https://soundcloud.com/user-850762260" class="icon brands fa-soundcloud" target="_blank"><span class="label">SoundCloud</span></a></li>
-						<li><a href="https://bummerstatus.bandcamp.com/album/bmoney-demo" class="icon brands fa-bandcamp" target="_blank"><span class="label">BandCamp</span></a></li>
+						<li><a href="https://bummerstatus.bandcamp.com/" class="icon brands fa-bandcamp" target="_blank"><span class="label">BandCamp</span></a></li>
 						<li><a href="https://www.youtube.com/channel/UCmTMPodGEv3FvWGUFlRKY9g" class="icon brands fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
 					</ul>
 				</div>
