Update index text

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<div class="container">
 					<header>
 						<h2 class="alt">Hi and welcome! We are a Boston-based rock band known as <strong>Bummer Status.</strong></h2>
-						<p>Announcing our debut album - Jamming In My Snowpants, is released as of April 30th!</p>
+						<p>Our debut album, Jamming In My Snowpants, is out now on all streaming platforms.</p>
 					</header>
 					<footer>
 						<a href="#whatsnew" class="button scrolly">Have a look around</a>
