--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@
 					<header>
 						<h2>Upcoming Performances</h2>
 					</header>
-					<p>Midway Cafe, Jamaica Plain, MA - 5/28/2022</p>
+					None currently
 					<header>
 						<h2>Past Performances</h2>
 					</header>
+					<p>Midway Cafe, Jamaica Plain, MA - 5/28/2022</p>
 					<p>Porch Fest, Somerville, MA - 5/14/2022</p>
 					<p>Union Tavern, Somerville, MA - 3/4/2022</p>
 					<p>Eric's House Show, Somerville, MA - 10/31/2021</p>
