--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<header>
 						<h2>What's New</h2>
 					</header>
-					<p>Check out our newest (and first ever) music video, Pokemon Monopoly (For Perry)</p>
+					<p>Check out our first ever music video of our song Pokemon Monopoly (For Perry)</p>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/YH9eLVq9W4M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 			</section>
@@ -168,7 +168,7 @@
 					<header>
 						<h2>Get In Touch</h2>
 					</header>
-					<p>If you are interested in learning more about the Bummer Status experience or booking us for a show, please feel free to drop us a note here.</p>
+					<p>If you are interested in learning more about the Bummer Status experience or booking us for a show, please feel free to submit a message here.</p>
 					<form method="post" name="get-in-touch-form" id="get-in-touch-form" novalidate>
 						<div class="row">
 							<div class="col-6 col-12-mobile"><input type="text" name="name-input" id="name-input" placeholder="First name ..." required data-validation-required-message="Please enter your name" /></div>
@@ -187,7 +187,7 @@
 		</div>
 		<div id="footer">
 			<ul class="copyright">
-				<li>&copy; 2022 Bummer Status, all rights reserved.</li><li>Design by <a href="https://github.com/michemcc" target="_blank">Michael Ernest McCarthy</a></li>
+				<li>&copy; 2023 Bummer Status, all rights reserved.</li><li>Design by <a href="https://github.com/michemcc" target="_blank">Michael Ernest McCarthy</a></li>
 			</ul>
 		</div>
 		<script src="assets/js/jquery.min.js"></script>
