--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<li><a href="https://twitter.com/bummerstatus26" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.instagram.com/bummerstatus/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 					<li><a href="https://open.spotify.com/artist/0nT3SbubOPPXR38HQwJ8yC" class="icon brands fa-spotify" target="_blank"><span class="label">Spotify</span></a></li>
-					<li><a href="https://music.apple.com/us/artist/bummer-status/1571591835" class="icon brands fa-apple" target="_blank"><span class="label">Apple</span></a></li>
+					<li><a href="https://music.apple.com/us/artist/bummer-status/1571591835" class="icon brands fa-apple" target="_blank"><span class="label">Apple Music</span></a></li>
 					<li><a href="https://soundcloud.com/user-850762260" class="icon brands fa-soundcloud" target="_blank"><span class="label">SoundCloud</span></a></li>
 				</ul>
 			</div>
@@ -68,7 +68,7 @@
 					<header>
 						<h2>What's New</h2>
 					</header>
-					<p>Check out our first ever music video of our song Pokemon Monopoly (For Perry)</p>
+					<p>Check out our first ever music video: Pokemon Monopoly (For Perry)</p>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/YH9eLVq9W4M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 			</section>
@@ -121,7 +121,7 @@
 					<header>
 						<h2>Upcoming Performances</h2>
 					</header>
-					None currently
+					Check back soon.
 					<header>
 						<h2>Past Performances</h2>
 					</header>
