Add album to discography

--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
 					<div class="row">
 						<div class="col-4 col-12-mobile">
 							<article class="item">
+								<a href="https://open.spotify.com/album/1pj23eMFAPRHnhUPah4QK9" target="_blank" class="image fit"><img src="images/jamming.webp" alt="April" /></a>
+								<header>
+									<h3>Jamming in My Snowpants</h3>
+								</header>
+							</article>
+						</div>
+						<div class="col-4 col-12-mobile">
+							<article class="item">
 								<a href="https://open.spotify.com/album/0wEOu5sYAChLdIbQpWSJF3" target="_blank" class="image fit"><img src="images/april.webp" alt="April" /></a>
 								<header>
 									<h3>April</h3>
@@ -108,9 +116,7 @@
 			</section>
 			<section id="about" class="about">
 				<div class="container">
-					<header>
-						<h2>About the Band</h2>
-					</header>
+					<header><h2>About the Band</h2></header>
 					<a href="#about" class="image featured"><img src="images/bummer-fullband-2.webp" alt="Full band picture" /></a>
 					<p>With roots tracing back to the underbelly of the Burlington, VT college scene, Bummer Status is comprised of four like-minded musicians with a passion for writing and performing incredibly tasteful jams.</p>
 					<p>The band members are guitarist/vocalist Nicholas Andrews, bassist Elliott Kenney, drummer/vocalist Doug Lane, and pianist/vocalist Mike McCarthy.</p>
