Change text on index

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<header>
 						<h2>Discography</h2>
 					</header>
-					<p>Here is our complete Bummer Status discography including single tracks, EPs, live jams and full albums.</p>
+					<p>Here is our complete Bummer Status discography including full albums, single tracks, EPs, and live jams.</p>
 					<div class="row">
 						<div class="col-4 col-12-mobile">
 							<article class="item">
