--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<header>
 						<h2>Upcoming Performances</h2>
 					</header>
-					Check back soon.
+					<p>Union Tavern, Somerville, MA - 3/19/2022</p>
 					<header>
 						<h2>Past Performances</h2>
 					</header>
@@ -180,7 +180,7 @@
 							<div class="col-6 col-12-mobile"><input type="text" name="name-input" id="name-input" placeholder="First name ..." required data-validation-required-message="Please enter your name" /></div>
 							<div class="col-6 col-12-mobile"><input type="text" name="email-input" id="email-input" placeholder="Email ..." required data-validation-required-message="Please enter your email address"/></div>
 							<div class="col-12">
-								<textarea name="description-input" id="description-input" placeholder="Message ..." required data-validation-required-message="Please enter a message"></textarea>
+								<textarea name="description-input" id="description-input" placeholder="Your message ..." required data-validation-required-message="Please enter a message"></textarea>
 							</div>
 							<div id="success"></div>
 							<div class="col-12">
