--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<article class="item">
 								<a href="https://open.spotify.com/album/1pj23eMFAPRHnhUPah4QK9" target="_blank" class="image fit"><img src="images/jamming.webp" alt="April" /></a>
 								<header>
-									<h3>Jamming in My Snowpants</h3>
+									<h3>Jamming in my Snowpants</h3>
 								</header>
 							</article>
 						</div>
@@ -99,7 +99,7 @@
 							<article class="item">
 								<a href="https://open.spotify.com/album/71KGBilKMt9QuwfygHBUMi" target="_blank" class="image fit"><img src="images/colchester.webp" alt="Colchester" /></a>
 								<header>
-									<h3>Colchester Winter (Feat. Jesse The Tree)</h3>
+									<h3>Colchester Winter (Feat. Jesse the Tree)</h3>
 								</header>
 							</article>
 						</div>
