--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 					<header>
 						<h2>Get In Touch</h2>
 					</header>
-					<p>If you are interested in learning more about the Bummer Status experience or booking us for a show, please feel free to submit a message here.</p>
+					<p>If you're interested in learning more about the Bummer Status experience or booking us for a show, please feel free to submit a message here.</p>
 					<form method="post" name="get-in-touch-form" id="get-in-touch-form" novalidate>
 						<div class="row">
 							<div class="col-6 col-12-mobile"><input type="text" name="name-input" id="name-input" placeholder="First name ..." required data-validation-required-message="Please enter your name" /></div>
