--- a/index.html
+++ b/index.html
@@ -124,13 +124,9 @@
 			</section>
 			<section id="past" class="performances">
 				<div class="container">
-					<header>
-						<h2>Upcoming Performances</h2>
-					</header>
+					<header><h2>Upcoming Performances</h2></header>
+					<header><h2>Past Performances</h2></header>
 					<p>Union Tavern, Somerville, MA - 3/26/2022</p>
-					<header>
-						<h2>Past Performances</h2>
-					</header>
 					<p>Midway Cafe, Jamaica Plain, MA - 5/28/2022</p>
 					<p>Porch Fest, Somerville, MA - 5/14/2022</p>
 					<p>Union Tavern, Somerville, MA - 3/4/2022</p>
