--- a/index.html
+++ b/index.html
@@ -140,9 +140,7 @@
 			</section>
 			<section id="gallery" class="gallery">
 				<div class="container">
-					<header>
-						<h2>Gallery</h2>
-					</header>
+					<header><h2>Gallery</h2></header>
 					<div class="container p-3">
 						<div class="fg-gallery">
 							<img src="images/prov-house-show.webp" alt="">
@@ -166,9 +164,7 @@
 			</section>
 			<section id="contact" class="contact">
 				<div class="container">
-					<header>
-						<h2>Get In Touch</h2>
-					</header>
+					<header><h2>Get In Touch</h2></header>
 					<p>If you're interested in learning more about the Bummer Status experience or booking us for a show, please feel free to submit a message here.</p>
 					<form method="post" name="get-in-touch-form" id="get-in-touch-form" novalidate>
 						<div class="row">
