--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<form method="post" name="get-in-touch-form" id="get-in-touch-form" novalidate>
 						<div class="row">
 							<div class="col-6 col-12-mobile"><input type="text" name="name-input" id="name-input" placeholder="First name ..." required data-validation-required-message="Please enter your name" /></div>
-							<div class="col-6 col-12-mobile"><input type="text" name="email-input" id="email-input" placeholder="Email ..." required data-validation-required-message="Please enter your email address"/></div>
+							<div class="col-6 col-12-mobile"><input type="text" name="email-input" id="email-input" placeholder="Email address..." required data-validation-required-message="Please enter your email address"/></div>
 							<div class="col-12">
 								<textarea name="description-input" id="description-input" placeholder="Your message ..." required data-validation-required-message="Please enter a message"></textarea>
 							</div>
