--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div id="logo">
 					<span class="image avatar60"><img src="images/bummer-110x110.png" style="border-radius: 4px;" alt="Band logo" /></span>
 					<h1 id="title">Bummer Status</h1>
-					<p>Boston, Massachusetts</p>
+					<p>Boston, MA</p>
 				</div>
 				<nav id="nav">
 					<ul>
