--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="top">
 				<div id="logo">
 					<span class="image avatar60"><img src="images/bummer-110x110.png" style="border-radius: 4px;" alt="Band logo" /></span>
-					<h1 id="title">Band Name</h1>
+					<h1 id="title">Bummer Status</h1>
 					<p>Boston, MA</p>
 				</div>
 				<nav id="nav">
