--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 			<section id="past" class="performances">
 				<div class="container">
 					<header><h2>Upcoming Performances</h2></header>
+					<p>None currently</p>
 					<header><h2>Past Performances</h2></header>
 					<p>Union Tavern, Somerville, MA - 3/26/2022</p>
 					<p>Midway Cafe, Jamaica Plain, MA - 5/28/2022</p>
